have to evaluate travel time by distance

--- a/Evaluation/results.ipynb
+++ b/Evaluation/results.ipynb
@@ -14,50 +14,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Remove outliers by  Congestion_ratio_AVG !\n",
-      "    alpha_1  alpha_2  alpha_3  Congestion_ratio_AVG  Number_of_YTs\n",
-      "0         0        0      100              0.030837             10\n",
-      "1        10       80       10              0.033178             10\n",
-      "2        20       70       10              0.032161             10\n",
-      "3        30       60       10              0.033367             10\n",
-      "4        40       50       10              0.034532             10\n",
-      "..      ...      ...      ...                   ...            ...\n",
-      "94       40       50       10              0.362761             60\n",
-      "95       50       40       10              0.347118             60\n",
-      "96       60       30       10              0.357249             60\n",
-      "97       70       20       10              0.361877             60\n",
-      "98       80       10       10              0.344955             60\n",
+      "Remove outliers by  Congestion_ratio !\n",
+      "      Prev Truck Number Now Truck Number  alpha_1  alpha_2  alpha_3  \\\n",
+      "0                     5                5        0        0      100   \n",
+      "1                     5                5        0        0      100   \n",
+      "2                     5                5        0        0      100   \n",
+      "3                     5                5        0        0      100   \n",
+      "4                     5                5        0        0      100   \n",
+      "...                 ...              ...      ...      ...      ...   \n",
+      "45533                30               30       10       80       10   \n",
+      "45534                30               30       10       80       10   \n",
+      "45535                30               30       10       80       10   \n",
+      "45536                30               30       10       80       10   \n",
+      "45537                30               30       10       80       10   \n",
       "\n",
-      "[99 rows x 5 columns]\n"
+      "       repeat_num  Congestion_ratio TravelTime_by_Distance  \n",
+      "0               1         -0.030833     2.6661333333333346  \n",
+      "1               1         -0.036999      2.238814814814814  \n",
+      "2               1          0.064451      2.474666666666666  \n",
+      "3               1          0.073779     2.2835348837209306  \n",
+      "4               1          0.102983      2.329244444444444  \n",
+      "...           ...               ...                    ...  \n",
+      "45533          60          0.226757               2.628878  \n",
+      "45534          60          0.193195               2.537488  \n",
+      "45535          60          0.235012               2.626419  \n",
+      "45536          60          0.380586                  2.936  \n",
+      "45537          60          0.237632               2.567059  \n",
+      "\n",
+      "[45538 rows x 8 columns]\n"
      ]
     }
    ],
    "source": [
-    "folder_path = 'results'\n",
-    "y_col = ['Congestion_ratio_AVG']\n",
+    "folder_path = 'Results'\n",
+    "y_col = ['Congestion_ratio', 'TravelTime_by_Distance']\n",
     "\n",
-    "congestion_ratio_avg_dfs = f.get_dfs_by_folder(folder_path, y_col, True, y_col[0])\n",
-    "congestion_ratio_avg_new_dfs = {}\n",
-    "# Initialize an empty DataFrame to store the results\n",
-    "congestion_ratio_avg_merged_df = pd.DataFrame()\n",
+    "travel_dfs = f.get_dfs_by_folder(folder_path, y_col, True, y_col[0])\n",
     "\n",
-    "for df_name, df in congestion_ratio_avg_dfs:\n",
+    "concat_df = pd.DataFrame()\n",
+    "\n",
+    "for file_name, df in travel_dfs:\n",
+    "    shortest_df = df[(df['alpha_1'] == 0) & (df['alpha_2'] == 0) & (df['alpha_3'] == 100)]\n",
+    "    others_df = df[(df['alpha_1'] == 10) & (df['alpha_2'] == 80) & (df['alpha_3'] == 10)]\n",
     "    \n",
-    "    Number_of_YT = int(df['Prev Truck Number'].unique()[0]) + int(df['Now Truck Number'].unique()[0])\n",
-    "    grouped_df = df.groupby(['alpha_1', 'alpha_2', 'alpha_3'])['Congestion_ratio_AVG'].mean().reset_index()\n",
-    "    grouped_df['Number_of_YTs'] = Number_of_YT\n",
-    "    congestion_ratio_avg_new_dfs[df_name] = grouped_df\n",
-    "    \n",
-    "    congestion_ratio_avg_merged_df = pd.concat([congestion_ratio_avg_merged_df, grouped_df], ignore_index=True)\n",
+    "    # concat shortest_df and others_df and concat_df\n",
+    "    concat_df = pd.concat([concat_df, shortest_df, others_df], ignore_index=True)\n",
     "\n",
-    "print(congestion_ratio_avg_merged_df)\n",
+    "print(concat_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # travel_dfs = {}\n",
+    "# # Initialize an empty DataFrame to store the results\n",
+    "# congestion_ratio_avg_merged_df = pd.DataFrame()\n",
+    "\n",
+    "# for df_name, df in travel_dfs:\n",
+    "    \n",
+    "#     Number_of_YT = int(df['Prev Truck Number'].unique()[0]) + int(df['Now Truck Number'].unique()[0])\n",
+    "#     grouped_df = df.groupby(['alpha_1', 'alpha_2', 'alpha_3'])['Congestion_ratio_AVG'].mean().reset_index()\n",
+    "#     grouped_df['Number_of_YTs'] = Number_of_YT\n",
+    "#     congestion_ratio_avg_new_dfs[df_name] = grouped_df\n",
+    "    \n",
+    "#     congestion_ratio_avg_merged_df = pd.concat([congestion_ratio_avg_merged_df, grouped_df], ignore_index=True)\n",
+    "\n",
+    "# print(congestion_ratio_avg_merged_df)\n",
     "    "
    ]
   },
